# pyfastchess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/: CODEOWNERS
src/: backend.cpp  backend.hpp  batcher.cpp  batcher.hpp  binding.cpp  cache.cpp  cache.hpp  evaluator.cpp  evaluator.hpp  mcts.cpp  mcts.hpp  prior_registry.cpp  prior_registry.hpp
src/pyfastchess/: __init__.py
