[build-system]
requires = ["scikit-build-core>=0.9", "pybind11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pyfastchess"
version = "0.1.0"
description = "Fast C++ movegen/boardstate with a Pythonic wrapper"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.minimum-version = "3.18"
cmake.build-type = "Release"
wheel.packages = ["."]
