[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "pyfastchess"
version = "0.1.0"
description = "MVP pybind11 wrapper around Disservin chess-library"
requires-python = ">=3.8"

[tool.scikit-build]
minimum-version = "0.10"
build.verbose = true

[tool.scikit-build.wheel]
packages = ["src/pyfastchess"]

[tool.scikit-build.sdist]
include = ["CMakeLists.txt", "src/**", "extern/**", "README.md", "pyproject.toml"]
